[package]
name = "git-shell"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_dirs = "1.2"
console = ">=0.3.0, <1.0.0"
dirs = "1"
memchr = "2.1"
sublime_fuzzy = "0.5"
walkdir = "2"
