[package]
name = "git-quick"
version = "0.1.0"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2018"
description = "Navigate between git repositories and issue basic commands."

homepage = "https://github.com/pka/git-quick"
repository = "https://github.com/pka/git-quick"

license = "MIT"
readme = "README.md"

keywords = ["git"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "git-quick"
doc = false

[dependencies]
app_dirs = "1.2"
chrono = "0.4"
console = ">=0.3.0, <1.0.0"
dirs = "1"
memchr = "2.1"
sublime_fuzzy = "0.5"
walkdir = "2"

[dependencies.git2]
version = "0.8"
default-features = false  # without SSH/HTTPS/Curl
